<resources>
    <string name="app_name">WiFi Guest Access</string>
    <string name="action_settings">Settings</string>
    <string name="enc_summary">Encryption for the Guest-WiFi network</string>
    <string name="enc_title">Encryption</string>
    <string name="key_summary">The key used to encrypt the Guest-WiFi network traffic</string>
    <string name="key_title">Encryption key</string>
    <string name="random_summary">Use a different, random encryption key each time a Guest-WiFi is started</string>
    <string name="random_title">Random encryption key</string>
    <string name="limited_summary">Only allow surfing and mailing in the Guest-WiFi</string>
    <string name="limited_title">Limited access</string>
    <string name="comm_summary">Devices in the Guest-WiFi network can communicate with each other</string>
    <string name="comm_title">Allow communication</string>
    <string name="hint_ssid">WiFi-SSID</string>
    <string name="hint_key">WiFi-Password</string>
    <string name="enable">Enable Guest-WiFi</string>
    <string name="disable">Disable Guest-WiFi</string>
    <string name="pw_too_short">Password too short - appending random number</string>
    <string name="scan_to_connect">Scan this code from an Android device to connect to the Guest-WiFi</string>
    <string name="reading_config">Reading configuration</string>
    <string name="please_wait">Please wait...</string>
    <string name="save_login">Save login data</string>
    <string name="user_hint">Fritz!Box user name</string>
    <string name="pw_hint">Fritz!Box password</string>
    <string name="pw_text">The Fritz!Box login requires authentication. Please enter the account information for a Fritz!Box user with permission to change the Fritz!Box settings. You can leave the username empty if you have not setup any account on your Fritz!Box</string>
    <string name="blocked">The Fritz!Box login is blocked for another %d seconds due to too many failed login attempts</string>
    <string name="read_config">Read configuration from Fritz!Box</string>
    <string name="not_connected">Not connected to Fritz!Box.\nPlease connect to your Fritz!Box WiFi network to be able to read and change the state of the guest network</string>
    <string name="trial">App runs in trial mode - WiFi Name (SSID) and password can not be changed. Click here to purchase the full version of the app</string>
    <string name="connect_license">Can not connect to license server, please try again later</string>
    <string name="delete_login_summary">Delete any saved Fritz!Box login data</string>
    <string name="delete_login_title">Delete login</string>
    <string name="error_no_fritzbox">Fritz!Box not found. Please make sure that you\'re connected to the private Fritz!Box WiFi network with this device</string>
    <string name="error_unsupported_version">Login page not found - your Fritz!Box software version might not be supported</string>
    <string name="help">Help</string>
    <string name="guest_settings_not_found">Guest-WiFi settings not found - please make sure your Fritz!Box supports this feature and contact me if it does</string>
    <string name="ip_address">Fritz!Box IP-address</string>
    <string name="ip_address_summary">If the connection to the Fritz!Box does not work, try entering the IP address directly (without http://)</string>
    <string name="guest_wifi_active">Guest-WiFi active</string>
    <string name="ask_version">Which FRITZ!OS version do you use?</string>
    <string name="version_title">FRITZ!OS version</string>
    <string name="version_summary">Switch to another FRITZ!OS version</string>
</resources>
