<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="3"
        android:entries="@array/enc_names"
        android:entryValues="@array/enc_values"
        android:key="sec_mode"
        android:summary="@string/enc_summary"
        android:title="@string/enc_title"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="random_key"
        android:summary="@string/random_summary"
        android:title="@string/random_title"
    />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wifi_limited_access"
        android:summary="@string/limited_summary"
        android:title="@string/limited_title"
    />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="wifi_communicate"
        android:summary="@string/comm_summary"
        android:title="@string/comm_title"
    />
    <EditTextPreference
        android:defaultValue="fritz.box"
        android:key="address"
        android:summary="@string/ip_address_summary"
        android:title="@string/ip_address"
    />
    <Preference
        android:key="delete_login"
        android:summary="@string/delete_login_summary"
        android:title="@string/delete_login_title"
    />
    <Preference
        android:key="delete_version"
        android:summary="@string/version_summary"
        android:title="@string/version_title"
    />
</PreferenceScreen>
